<resources>
    <string name="app_name">Budgets</string>

    <!-- Strings related to login -->
    <string name="action_settings">Settings</string>
    <string name="login_text">Login Page</string>
    <string name="name">Name</string>
    <string name="username_text">User Name</string>
    <string name="password_text" translatable="false">Password</string>
    <string name="attempt_text">Attempt</string>
    <string name="button_login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="action_register">Register</string>
    <string name="home_text">Home</string>
    <string name="calc_text">Calculator</string>
    <string name="calendar_text">Calendar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_title">Search</string>
    <string name="ten">10</string>
    <string name="food_text">Food</string>
    <string name="social_text">Social</string>
    <string name="savings_text">Savings</string>
    <string name="utilities_text">Utilities</string>
    <string name="title_activity_bottom_navigation_main">bottom_navigation_main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
