<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="leejenny100.com.budgets.loginActivity">

    <!-- Login progress -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_name"
                    android:drawableStart="@drawable/ic_action_name"
                    android:textColorHint="#3B3B3E"
                    android:hint="@string/name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_action_user"
                    android:drawableStart="@drawable/ic_action_user"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#3B3B3E"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_pwd"
                    android:drawableStart="@drawable/ic_action_pwd"
                    android:textColorHint="#3B3B3E"
                    android:hint="@string/password_text"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textColor="#000000" />
</LinearLayout>




