<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#FFFFFF">


    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="40dp"
        android:text="@string/savings_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/social"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:background="#C06C84" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="365dp"
        android:text="@string/food_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#F8B195" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="365dp"
        android:background="#F67280"
        android:text="@string/utilities_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/social"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/social"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="#FFAAA6"
        android:text="@string/social_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="189dp"
        android:layout_height="171dp"
        android:indeterminateTint="#355C7D"
        android:indeterminateTintMode="src_in"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:visibility="visible" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="date"
        android:lineSpacingExtra="12sp"
        android:padding="5dp"
        android:textColor="#355C7D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="04.25.2018" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="53dp"
        android:layout_height="39dp"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:inputType="number"
        android:text="80%"
        android:textColor="#355c7d"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>